@@ -11,8 +11,8 @@
 		'@srcdir@/core/exmpp_jid',
 		'@srcdir@/core/exmpp_jlib',
 		'@srcdir@/core/exmpp_stream',
-        '@srcdir@/network/exmpp_callbacks',
-        '@srcdir@/network/exmpp_tcp',
+		'@srcdir@/network/exmpp_callbacks',
+		'@srcdir@/network/exmpp_tcp',
 		'@srcdir@/client/exmpp_client_stream',
 		'@srcdir@/client/exmpp_client_tls',
 		'@srcdir@/client/exmpp_client_compression',
