@@ -9,6 +9,8 @@ EXTRA_DIST = core/exmpp.erl						\
 	     core/exmpp_jid.erl						\
 	     core/exmpp_jlib.erl					\
 	     core/exmpp_stream.erl					\
+	     network/exmpp_callbacks.erl				\
+	     network/exmpp_tcp.erl					\
 	     client/exmpp_client_stream.erl				\
 	     client/exmpp_client_tls.erl				\
 	     client/exmpp_client_compression.erl			\
